--- a/e-commerce-app/src/styles/globals.css
+++ b/e-commerce-app/src/styles/globals.css
@@ -1,37 +1,52 @@
 *{
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing:border-box;
+  padding:0;
+  text-decoration: none;
+  list-style: none;
   box-sizing: border-box;
+  margin:0;
 }
+a{color: inherit;}
 body{
-  background-color: #0E1214;
-  color: white;
-  margin: 0px;
-  padding: 0px;
-  top: 0;
-  position: relative;
+  background-color: #202124;
+  padding-top: 80px;
 }
 
-.nav{
-  background-color: #202124;
-  margin-block-start: 0%;
-  margin-block-end: 0%;
-  padding-inline-start: 10%;
-  top:0;
-  width:100%;
-  display: inline-block;
-  
+.pageContainer{
+  position: relative;
+  min-height: 100vh;
 }
-.navElement{
-  background-color: #202124;
-  color: white;
-  text-align: center;
-  padding-top: 10px;
-  cursor: pointer;
+.nav{
+  background-color:/*#154c79*/#202124;
+  height: 80px;
+  top: 0;
+  width:100%;
+  position: fixed;
+  font-family: sans-serif;
+
+}
+.nav .brand img{
+  height: 78px;
+  float:left;
+  padding-left: 10%;
+}
+.nav .brand h1{
+  height: 60px;
   float: left;
-  margin: 10px;
+  margin-top:15px;
+  font-weight: bold;
+  color: white;
+}
+.nav .navContainer ul {
+  float: right;
+  margin-right:5%
+}
+.nav ul li{
+  display: inline-block;
+  color: white;
+  margin-top:30px;
+  margin-left: 20px;
   height: 40px;
-  margin-top: 20px;
+  font-size: larger;
   text-transform: uppercase;
   border-bottom: 2px solid;
   border-color: #202124;
@@ -41,34 +56,82 @@ body{
 .navElement:hover{
   border-color: white;
 }
-
-.navContainer ul{
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  width: 40%;
-  display: inline-block;
-  padding-inline-end: 10%;
-}
-#__next{
-  padding: 0;
-  margin:0;
-  top: 0;
-  position:relative;
-}
-div{
-  margin: 0;
-  padding:0;
-}
-.brand {
-  width: 60%;
+.nav .navMenu{
   float: left;
-  height:30px;
+  height: 40px;
+  margin-top: 20px;
+  margin-left: 10px;
+  position: fixed;
+  left: -100%;
+  cursor: pointer;
 }
-.brand .logo{
-  height: 70px;
-  float: left
+
+@media (max-width: 1000px) {
+  .nav .navMenu{
+    left:0
+  }
+  .nav .brand h1{
+    font-size: 20px;
+    padding-top: 10px;
+  }
+  #navList{
+    top: 80px;
+    position: fixed;
+    width:100%;
+    height:100vh;
+    background: #17181a;
+    left:-100%;
+    text-align: center;
+    transition-duration: 0.5s;
+    transition-property: left ;
+  }
+  .nav ul li{
+    display: block;
+  }
+  .nav ul li:hover{
+    color: #1e81b0;
+  }
 }
-.clearfix{
-  clear:both
+
+
+.footer{
+  background-color: white;
+  bottom:0;
+  width: 100%;
+  box-shadow:2px;
+  position:absolute;
+  overflow: hidden;
+  height: 3cm;
+}
+.footer .pages{
+  width: 25%;
+  float: left;
+  left:20px;
+  margin-left: 12%
+}
+.footer .policies{
+  width: 25%;
+  float: left;
+  left:20px;
+}
+.footer .socials{
+  width: 25%;
+  float: left;
+  left:20px;
+}
+.footer ul{
+  list-style: none;
+}
+
+.footer a{
+  text-decoration: none;
+}
+.footer-header{
+  margin-left:40px;
+  border-bottom: 2px solid black;
+  color: #202124;
+}
+.footer li{
+  color:black;
+  margin-left: 40px;
 }
